# predicao-epilepsia

./: .gitignore  Resultados IC.xlsx  janelas_para_sequencias.py  junta_sequencias.py  pyproject.toml  vetores_para_sequencias.py
CONICT/: bibliografia.bib  cabecalho.tex  main.tex
Docs/: docs.md
Grafos/: caracteristicas_numba.py  caracteristicas_paralelismo.py  conversor.py  converte_dataset.py  converte_dataset_paralelismo.py
LSTM/: LSTM_Tsiouris.py  LSTM_recomendado.py  exemploVets_2D.py  lstm_novo.py  roda_tudo.py
Relatórios/: Relatório parcial.pdf:Zone.Identifier
Vetores e LSTM Tsiouris et. al/cria_janelas/: conversor.py  eegUmArqPhysionet.py  leSummary.py  montaArqsJanelas.py
Vetores e LSTM Tsiouris et. al/monta_vetores/: montaVetsEstatisticos.py  montaVetsFFT.py  montaVetsGrafosCorrelacoes.py  montaVetsWavelets.py
metodo_tsiouris/: LSTM_Tsiouris.py
monta_arquivos/: cria_sequencias.py  cria_sequencias_misturado.py  csv_para_parquet.py  montaVetsCorr.py  montaVetsEstatisticos.py  montaVetsFFT.py  montaVetsGrafos.py  montaVetsWavelets.py
monta_arquivos/preprocessamento/: conversor.py  eegUmArqPhysionet.py  leSummary.py  montaArqsJanelas.py
monta_vetores/: cria_sequencias.py  montaVetsEstatisticos.py  montaVetsFFT.py  montaVetsGrafos.py  montaVetsWavelets.py
preprocessamento/: conversor.py  cria_sequencias_Tsiouris.py  eegUmArqPhysionet.py  leSummary.py  montaArqsJanelas.py  montaArqsJanelasAntigo.py
