[tool.poetry]
name = "predicao-epilepsia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.4.2"
networkx = "^2.8"
numpy = "^1.22.3"
tensorflow = "^2.8.0"
scikit-learn = "^1.0.2"
PyWavelets = "^1.2.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
