[tool.poetry]
name = "predicao-epilepsia"
version = "0.1.0"
description = ""
authors = ["Luís Otávio Amorim <luisotaviolamorim@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.4.2"
numpy = "^1.22.3"
tensorflow = "^2.8.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
networkx = "^2.8"
PyWavelets = "^1.3.0"
tk = "^0.1.0"
PyQt5 = "^5.15.6"
mne = "^1.0.3"
imbalanced-learn = "^0.9.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
